tests/NormalTests/paczka1/fuzzy1/67520134.err
Error in line 6: mOG7u S53 60,5
Error in line 17: n0d S101 91,10
Error in line 12: mOG7u S720 28,7
Error in line 15: 3OLmO S720 74,9
Error in line 22: mOG7u S101 28,7
Error in line 20: FaAiWB8P S53 55,9
Error in line 33: n0d S720 93,0
